--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <title>Socket.IO chat</title>
+  <!-- 합쳐지고 최소화된 최신 CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
   <style>
     * {
       margin: 0;
